--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,4 +14,8 @@
         Forgot Your Password?
         <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
     </p>
+
+    <div class="jumbotron" style=" background-color: #1f2226;padding: 10px;" >
+  <img src="{{ url_for('static', filename='img/river_2023_2.jpg') }}" style="height: 20vh; width: 100%; padding: 10px; " class="img-fluid" alt="Responsive Hero Image">
+</div>
 {% endblock %}
