--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -8,7 +8,8 @@
             {{ wtf.quick_form(form) }}
         </div>
     </div>
+
     <div class="jumbotron" style=" background-color: #1f2226;padding: 10px;" >
-  <img src="{{ url_for('static', filename='img/river_2023_2.jpg') }}" style="height: 20vh; width: 100%; padding: 10px; " class="img-fluid" alt="Responsive Hero Image">
+  <img src="{{ url_for('static', filename='img/island_2023_2.jpg') }}" style="height: 20vh; width: 100%; padding: 10px; " class="img-fluid" alt="Responsive Hero Image">
 </div>
 {% endblock %}
