--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -38,7 +38,7 @@
     {% if next_url %}
     <a href="{{ next_url }}">Older posts</a>
     {% endif %}
-<div class="jumbotron" style=" background-color: #1f2226;padding: 10px;" >
-  <img src="{{ url_for('static', filename='img/river_2023_2.jpg') }}" style="height: 20vh; width: 100%; padding: 10px; " class="img-fluid" alt="Responsive Hero Image">
+    <div class="jumbotron" style=" background-color: #1f2226;padding: 10px;" >
+  <img src="{{ url_for('static', filename='img/island_2023_2.jpg') }}" style="height: 20vh; width: 100%; padding: 10px; " class="img-fluid" alt="Responsive Hero Image">
 </div>
 {% endblock %}
