--- a/app/templates/_post.html
+++ b/app/templates/_post.html
@@ -1,9 +1,9 @@
-<div class="container-fluid">
+<div class="container-fluid" style="padding-left:30px;">
 <table class="table table-hover">
         <tr>
             <td width="70px">
                 <a href="{{ url_for('user', username=post.author.username) }}">
-                    <img src="{{ post.author.avatar(70) }}" />
+                    <img src={{ "/static/img/" + post.author.profile_img() }} alt={{ post.author.profile_img() }} width=280>
                 </a>
             </td>
             <td>
