--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -4,10 +4,19 @@
 {% block app_content %}
     <h1>Edit Profile</h1>
     <div class="row">
+            <div class="col-md-4">
+
+                    <img src={{ "/static/img/" + img }} alt={{ img }} width=280>
+
+
+        </div>
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
+
+
     </div>
+
 
     <div class="jumbotron" style=" background-color: #1f2226;padding: 10px;" >
   <img src="{{ url_for('static', filename='img/island_2023_2.jpg') }}" style="height: 20vh; width: 100%; padding: 10px; " class="img-fluid" alt="Responsive Hero Image">
