ajax and js for time, language

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,7 +38,7 @@
       <div style="display: flex;">
       <div style="  width: 33.33%;">
           <a href="{{ url_for('user', username=author_posts[0].author_username) }}">
-              <img src={{ "/static/img/" + author.profile_img() }} alt="No Image " style="  width: 100px;  height: 100px;  object-fit: cover;">
+              <img src={{ "/static/img/" + author.profile_img() }} alt="No Image "style="border-radius: 50%; border: 2px solid black; height:300px;">
           </a>
       </div>
       <div  style="width: 66.66%;"  >
