--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,34 +1,51 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <table>
-        <tr valign="top">
-            <td><img src="{{ user.avatar(128) }}"></td>
-            <td>
-                        <h1>User: {{ user.username }}</h1>
-        {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-        {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p>{% endif %}
-        <p>{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
-        {% if user == current_user %}
-        <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
-        {% elif not current_user.is_following(user) %}
-        <p>
-            <form action="{{ url_for('follow', username=user.username) }}" method="post">
-                {{ form.hidden_tag() }}
-                {{ form.submit(value='Follow') }}
-            </form>
-        </p>
-        {% else %}
-        <p>
-            <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
-                {{ form.hidden_tag() }}
-                {{ form.submit(value='Unfollow') }}
-            </form>
-        </p>
-        {% endif %}
-            </td>
-        </tr>
-    </table>
+        	<div style="display: flex; flex-wrap: wrap; justify-content: space-between; align-items: flex-end; border-bottom: 2px solid black;">
+		<div style="flex: 1; padding: 10px; box-sizing: border-box; flex-basis: 25%;">
+            <div style="  padding: 10px; margin-bottom: 10px; text-align: center;">
+			<img src="{{ url_for('static', filename='img/WriterLogo.png') }}" alt="Logo" height="150">
+                                            {% if user.last_seen %}
+                    <p style="">Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
+                    {% endif %}
+            </div>
+		</div>
+		<div style="flex: 1; padding: 10px; box-sizing: border-box; flex-basis: 50%;">
+            <div style="  padding: 10px; margin-bottom: 10px; text-align: center; ">
+            <h1 style="text-align:left;">Freedom Zone - Express Yourself and be heard</h1>
+             <h2 style="text-align:left;">Citizen -  {{ user.username }}</h2>
+            {% if user.about_me %}<p>Activist Statement:  {{ user.about_me }}</p>{% endif %}
+
+
+            {% if user == current_user %}
+            <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+            {% elif not current_user.is_following(user) %}
+            <p>
+                <form action="{{ url_for('follow', _(username=user.username)) }}" method="post">
+                    {{ form.hidden_tag() }}
+                    {{ form.submit(value='Follow') }}
+                </form>
+            </p>
+            {% else %}
+            <p>
+                <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+                    {{ form.hidden_tag() }}
+                    {{ form.submit(value='Unfollow') }}
+                </form>
+            </p>
+            {% endif %}
+            </div>
+		</div>
+		<div style="flex: 1; padding: 10px; box-sizing: border-box; flex-basis: 25%;">
+			<div style=" padding: 10px; margin-bottom: 10px; text-align: center;">
+                <img src={{ "/static/img/" + user.profile_img() }} alt="No Image " style="border-radius: 50%; border: 2px solid black; height:150px;">
+            <p style="">{{ user.followers.count() }} followers, {{ user.followed.count() }} following.</p>
+            </div>
+
+		</div>
+	</div>
+
+<div style="padding-left:50px; padding-top:20px;">
         {% for post in posts %}
         {% include '_post.html' %}
     {% endfor %}
@@ -38,6 +55,7 @@
     {% if next_url %}
     <a href="{{ next_url }}">Older posts</a>
     {% endif %}
+</div>
     <div class="jumbotron" style=" background-color: #1f2226;padding: 10px;" >
   <img src="{{ url_for('static', filename='img/island_2023_2.jpg') }}" style="height: 20vh; width: 100%; padding: 10px; " class="img-fluid" alt="Responsive Hero Image">
 </div>
