--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -9,11 +9,15 @@
                     <img src={{ "/static/img/" + img }} alt={{ img }} width=280>
 
 
+
+
         </div>
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
 
+
+    </div>
 
     </div>
 
